--- a/cli/package.json
+++ b/cli/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@ledgerhq/errors": "5.9.0",
+    "@ledgerhq/hw-app-btc": "file:.yalc/@ledgerhq/hw-app-btc",
+    "@ledgerhq/hw-app-swap": "file:.yalc/@ledgerhq/hw-app-swap",
     "@ledgerhq/hw-transport-http": "5.9.0",
     "@ledgerhq/hw-transport-mocker": "5.9.0",
     "@ledgerhq/hw-transport-node-hid": "5.10.0",
@@ -52,7 +54,9 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "rxjs": "^6.5.4",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "ws": "^7.1.2",
+    "secp256k1": "^3.7.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
