--- a/cli/package.json
+++ b/cli/package.json
@@ -54,9 +54,9 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "rxjs": "^6.5.4",
+    "secp256k1": "^3.7.1",
     "winston": "^3.2.1",
-    "ws": "^7.1.2",
-    "secp256k1": "^3.7.1"
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
