--- a/cli/package.json
+++ b/cli/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@ledgerhq/errors": "5.9.0",
+    "@ledgerhq/hw-app-btc": "file:.yalc/@ledgerhq/hw-app-btc",
     "@ledgerhq/hw-transport-http": "5.9.0",
     "@ledgerhq/hw-transport-mocker": "5.9.0",
     "@ledgerhq/hw-transport-node-hid": "5.10.0",
